src/index.css
:root {
  --color-primary: #84bf9e;
  --color-secondary: #a6bf80;
  --color-background: #40594b;
  --color-foreground: #fff;
}

* {
  box-sizing: border-box;
}

body {
  background-color: var(--color-background);
  color: var(--color-foreground);
  font-family: Inter, sans-serif;
  line-height: 1.5;
  margin: 0;
  min-height: 100vh;
}

button {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

button:disabled {
  cursor: not-allowed;
}

a {
  color: inherit;
}

input {
  accent-color: var(--color-primary);
}

h1 {
  font-weight: 300;
  font-size: 3.5rem;
  margin-block: 0 0.5em;
}

.app {
  padding: 2em;
}

.button {
  background-color: var(--color-primary);
  border-radius: 0.5em;
  color: var(--color-foreground);
  display: inline-block;
  font-size: 0.875rem;
  padding: 0.5em 1.5em;
}

.form {
  display: grid;
  gap: 1.5em;
}

.form__fields {
  display: flex;
  gap: 1em;
}

.form__field {
  display: flex;
  align-items: center;
  gap: 0.25em;
}

.form__legend {
  font-size: 1.25rem;
}

.game-info {
  align-items: center;
  display: flex;
  gap: 3rem;
  margin-block: 1.5em;
}

.cards {
  display: grid;
  gap: 0.5%;
  list-style: none;
  margin: 0;
  padding: 0;
}

.card {
  aspect-ratio: 1;
  font-size: 4rem;
  perspective: 1000px;
  width: 100%;
}

.card-inner {
  height: 100%;
  position: relative;
  text-align: center;
  transform-style: preserve-3d;
  transition: transform 0.5s;
  width: 100%;
  transform: rotateY(180deg);
}

.card.flipped .card-inner {
  transform: rotateY(0);
}

.card-front,
.card-back {
  backface-visibility: hidden;
  background-color: #fff;
  box-shadow: inset 0 0 0 3px currentColor;
  display: grid;
  inset: 0;
  place-items: center;
  position: absolute;
}

.card-front {
  background-color: var(--color-secondary);
}

.card-back {
  background-color: var(--color-secondary);
  color: white;
  transform: rotateY(180deg);
  font-weight: 100;
}

.card.matched .card-inner {
  transform: rotateY(0);
}

.win-message {
  font-size: 1.5rem;
  color: #4caf50;
  margin-top: 3rem;
  font-weight: bold;
}

.pause-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  z-index: 100;
}

.pause-overlay h2 {
  color: white;
  font-size: 2.5rem;
}

